Реализован поиск по названию и режиссёру (#12)
* Реализован поиск по названию и режиссёру

* Исправлена сортировка по году в FilmDbStorage и InMemoryFilmStorage

* Исправлены замечания

* Исправлен поиск фильмов после ревью

---------

Co-authored-by: damirshayk <damirshayk@yandex.ru>